--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <h1>Test</h1>
+
+    <div class="gameboard">
+        
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
