--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Odin Project Tic Tac Toe in Javascript</title>
 </head>
 <body>
-    <h1>Test</h1>
+    <h1>Tic Tac Toe in Javascript</h1>
 
     <div class="gameboard">
         
