--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Odin Project Tic Tac Toe in Javascript</title>
 </head>
 <body>
-    <h1>Tic Tac Toe in Javascript</h1>
+    <header>Tic Tac Toe in Javascript</header>
 
     <div class="gameboard">
         
