--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
     <header>Tic Tac Toe in Javascript</header>
 
     <div class="gameboard">
-        
+        <div class="cell-1"></div> <div class="cell-2"></div> <div class="cell-3"></div>
+        <div class="cell-4"></div> <div class="cell-5"></div> <div class="cell-6"></div>
+        <div class="cell-7"></div> <div class="cell-8"></div> <div class="cell-9"></div>
     </div>
+
+    <form action="">
+        
+    </form>
+
+    <button>Start Game</button>
+    <button>Restart</button>
     <script src="main.js"></script>
 </body>
 </html>
