--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>Tic Tac Toe in Javascript</header>
 
     <div class="gameboard">
-        <div class="cell"></div> <div class="cell"></div> <div class="cell"></div>
-        <div class="cell"></div> <div class="cell"></div> <div class="cell"></div>
-        <div class="cell"></div> <div class="cell"></div> <div class="cell"></div>
+        <div class="cell cell-1"></div> <div class="cell cell-2"></div> <div class="cell cell-3"></div>
+        <div class="cell cell-4"></div> <div class="cell cell-5"></div> <div class="cell cell-6"></div>
+        <div class="cell cell-7"></div> <div class="cell cell-8"></div> <div class="cell cell-9"></div>
     </div>
 
     <form action="">
