--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>Tic Tac Toe in Javascript</header>
 
     <div class="gameboard">
-        <div class="cell cell-1"></div> <div class="cell cell-2"></div> <div class="cell cell-3"></div>
-        <div class="cell cell-4"></div> <div class="cell cell-5"></div> <div class="cell cell-6"></div>
-        <div class="cell cell-7"></div> <div class="cell cell-8"></div> <div class="cell cell-9"></div>
+        <div class="cell cell-1" value = "1"></div> <div class="cell cell-2" value = "2"></div> <div class="cell cell-3" value = "3"></div>
+        <div class="cell cell-4" value = "4"></div> <div class="cell cell-5" value = "5"></div> <div class="cell cell-6" value = "6"></div>
+        <div class="cell cell-7" value = "7"></div> <div class="cell cell-8" value = "8"></div> <div class="cell cell-9" value = "9"></div>
     </div>
 
     <form action="">
