Fix tie game display

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Odin Project Tic Tac Toe in Javascript</title>
 </head>
 <body>
     <header>Tic Tac Toe in Javascript</header>
+
+    <p class="info"><span class="player-name">Player 1</span>'s turn</p>
 
     <div class="gameboard">
         <div class="cell cell-1" data-value = "1"></div> <div class="cell cell-2" data-value = "2"></div> <div class="cell cell-3" data-value = "3"></div>
@@ -16,12 +21,6 @@
         <div class="cell cell-7" data-value = "7"></div> <div class="cell cell-8" data-value = "8"></div> <div class="cell cell-9" data-value = "9"></div>
     </div>
 
-    <form action="">
-        
-    </form>
-
-    <button>Start Game</button>
-    <button>Restart</button>
     <script src="main.js"></script>
 </body>
 </html>
