--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <p class="info"><span class="player-name">Player 1</span>'s turn</p>
 
     <div class="gameboard">
-        <div class="cell cell-1" data-value = "1"></div> <div class="cell cell-2" data-value = "2"></div> <div class="cell cell-3" data-value = "3"></div>
-        <div class="cell cell-4" data-value = "4"></div> <div class="cell cell-5" data-value = "5"></div> <div class="cell cell-6" data-value = "6"></div>
-        <div class="cell cell-7" data-value = "7"></div> <div class="cell cell-8" data-value = "8"></div> <div class="cell cell-9" data-value = "9"></div>
+        <div class="cell" data-value = "1"></div> <div class="cell" data-value = "2"></div> <div class="cell" data-value = "3"></div>
+        <div class="cell" data-value = "4"></div> <div class="cell" data-value = "5"></div> <div class="cell" data-value = "6"></div>
+        <div class="cell" data-value = "7"></div> <div class="cell" data-value = "8"></div> <div class="cell" data-value = "9"></div>
     </div>
 
     <script src="main.js"></script>
